tests/baselines/reference/asyncGenerators.functionDeclaration.20.es6.errors.txt
tests/cases/conformance/asyncGenerators/es6/functionDeclarations/asyncGenerators.functionDeclaration.20.es6.ts(2,12): error TS2304: Cannot find name 'yield'.


==== tests/cases/conformance/asyncGenerators/es6/functionDeclarations/asyncGenerators.functionDeclaration.20.es6.ts (1 errors) ====
    async function * f() {
        var x: yield;
               ~~~~~
!!! error TS2304: Cannot find name 'yield'.
    }